2016-04-06  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEXMFVAR, TEXMFCONFIG): 2016.
	(shell_escape_commands): add gregorio, fingers crossed.

	* cnf.c (do_line): do not keep checking ISSPACE beyond
	end of string.  (Can crash on lines without spaces.)
	Return error string if problems.
	* kpathsea_cnf_get: give warning, with line number,
        if do_line returns a message.

2016-02-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmf.cnf: Typo.

2016-04-06  Karl Berry  <karl@tug.org>

	* kpsewhich.c, et al.: copyright 2016.

2016-03-06  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev for start of 2016 builds.

2016-02-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* kpsewhich.c: Allow Unicode file name for upmendex in kpsewhich.
	(Windows only)

2016-02-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.[ch], mingw32.[ch]: Define a function
	double win32_floor (double x), since floor is defined in cpascal.h.

2015-12-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.h: Update (w32 only).

2015-10-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpsewhich.c (USAGE): Say "list shown by -help-formats".

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Define WEB2CVERSION for WIN32 programs.

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 6.2.1 => 6.2.2dev.
	* configure.ac: Drop test for isascii (now in KPSE_COMMON).

2015-05-21  Karl Berry  <karl@tug.org>

	* TL'15.

2015-05-03  Karl Berry  <karl@tug.org>

	* kpsewhich.c: copyright 2015.
	* doc/kpathsea.texi (version, month-year): now 6.2.1, May 2015.
	(Auxiliary tasks): add --help-formats, sort.
	(Supported file formats): add bltxml, clua, ris.
	* NEWS: mention --help-formats.

2015-05-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* file-p.c: Implement same_file_p () for windows.
